--- a/My First WEBSITE/index.html
+++ b/My First WEBSITE/index.html
@@ -10,5 +10,8 @@
     <p>
         this is first time
     </p>
+    <p>
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta magnam a iure odit quam dicta, ipsa asperiores natus cumque dolore obcaecati quaerat blanditiis possimus, temporibus sint harum illo dolores velit! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum excepturi architecto aspernatur voluptas quo, fugiat illo culpa, beatae at asperiores nemo quam et vero in, suscipit maiores illum officiis magni. Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius qui exercitationem libero deserunt ipsum molestiae amet reprehenderit fugit totam ullam. Saepe tempora consequuntur necessitatibus incidunt non, eaque eius minima dolorem!
+    </p>
 </body>
 </html>
